; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_get_server_property.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_get_server_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_BAD_ARGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Argument should not be null\00", align 1
@seaf = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @seafile_get_server_property(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %18, label %13

13:                                               ; preds = %10, %3
  %14 = load i32**, i32*** %7, align 8
  %15 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %16 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %17 = call i32 @g_set_error(i32** %14, i32 %15, i32 %16, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %4, align 8
  br label %25

18:                                               ; preds = %10
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @seaf, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i8* @seaf_repo_manager_get_server_property(i32 %21, i8* %22, i8* %23)
  store i8* %24, i8** %4, align 8
  br label %25

25:                                               ; preds = %18, %13
  %26 = load i8*, i8** %4, align 8
  ret i8* %26
}

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*) #1

declare dso_local i8* @seaf_repo_manager_get_server_property(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
